[gd_scene load_steps=24 format=2]

[ext_resource path="res://assets/img/ally_ship/Ship_LVL_1.png" type="Texture" id=1]
[ext_resource path="res://actor/Swarm/SwarmActor.gd" type="Script" id=2]
[ext_resource path="res://assets/sfx/Vaisseaux_Decollage_T1.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sfx/Vaisseaux_Attack_T1-V1.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/img/effects/puff.png" type="Texture" id=5]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.784141, 0.903084, 1 )
colors = PoolColorArray( 0.922852, 0.0757027, 0.0757027, 1, 0.937805, 0.586996, 0.254862, 1, 0.957857, 0.893685, 0.495098, 1, 1, 1, 1, 0.541176 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.452, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.0602273 ), -2.33253, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 0.0
gravity = Vector3( 0, 200, 0 )
initial_velocity = 50.0
angular_velocity = 50.0
angular_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.05
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="Gradient" id=6]

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 0 ), 0.0, 1.86201, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = -90.0
scale = 0.02
scale_curve = SubResource( 9 )
color_ramp = SubResource( 7 )

[sub_resource type="Animation" id=11]
tracks/0/type = "value"
tracks/0/path = NodePath("LandingParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("LandingParticles")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "restart"
} ]
}

[sub_resource type="Animation" id=12]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Particles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Particles2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "restart"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TakeOffBurnParticles:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("TakeOffBurnParticles")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "restart"
} ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "flying"
} ]
}

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.745098, 0.164706, 0.164706, 0.278431 )

[sub_resource type="CircleShape2D" id=15]
radius = 16.4385

[sub_resource type="Curve" id=16]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.475 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=17]
curve = SubResource( 16 )

[sub_resource type="ParticlesMaterial" id=18]
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = -90.0
scale = 0.02
scale_curve = SubResource( 17 )

[node name="SwarmActor" type="KinematicBody2D"]
collision_layer = 64
collision_mask = 0
script = ExtResource( 2 )

[node name="TakeOffBurnParticles" type="Particles2D" parent="."]
position = Vector2( 0, 6.5 )
emitting = false
amount = 16
lifetime = 0.3
process_material = SubResource( 5 )
texture = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.02, 0.02 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( 9.11526, -0.0874004, 8.58493, 2.1665, 5.49134, 3.75749, 3.59099, 6.67431, -1.22617, 6.93947, -2.86136, 9.06079, -5.38043, 9.94468, -6.3527, 7.07206, -9.04854, 4.81815, -7.45755, 3.22716, -7.54594, -3.0926, -9.04854, -4.90457, -6.26431, -7.24686, -5.33623, -9.9869, -2.86136, -9.01462, -1.22617, -6.84911, 3.23744, -6.76072, 6.06587, -2.96002, 8.18719, -2.20872 )
disabled = true

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 0, 9.83224 )
emitting = false
amount = 1
one_shot = true
process_material = SubResource( 10 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/landing = SubResource( 11 )
anims/takeoff = SubResource( 12 )

[node name="Tween" type="Tween" parent="."]

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="GUI" type="Node2D" parent="."]

[node name="LifeBar" type="ProgressBar" parent="GUI"]
margin_left = -5.0
margin_top = -13.0
margin_right = 5.0
margin_bottom = -11.0
custom_styles/fg = SubResource( 13 )
custom_styles/bg = SubResource( 14 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 15 )

[node name="AudioStreamTakeOff" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "SFX"
area_mask = 0

[node name="AudioStreamShot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 1.0
max_distance = 1500.0
bus = "SFX"
area_mask = 0

[node name="LandingParticles" type="Particles2D" parent="."]
emitting = false
amount = 1
one_shot = true
process_material = SubResource( 18 )
texture = ExtResource( 1 )
[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
